style: add Hero section with Background image

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <title>Delani Studio</title>
 </head>
 <body>
-    
+    <div class="container-fluid hero">
+        <div class="bg-image d-flex flex-column justify-content-center align-items-center"style="background-image: url('./assets/backgrounds/h_img.jpg');height: 100vh;">
+            <h1 class="mb-5">WELCOME</h1>
+            <h1 class="">TO DELANI STUDIO</h1>
+            <p class="text-center">AMAZING PEOPLE ARE MAKING AMAZING DESINGS IN FUN ENVIRONMENTS</p>
+       </div>
+   </div>
 </body>
 </html>
