--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
     <title>Delani Studio</title>
 </head>
 <body>
+    
+    <!-- Hero section starts here -->
     <div class="container-fluid hero">
         <div class="bg-image d-flex flex-column justify-content-center align-items-center"style="background-image: url('./assets/backgrounds/h_img.jpg');height: 100vh;">
+            <img src="./assets/logo/logo.png" alt="" class="img-fluid mb-5">
             <h1 class="mb-5">WELCOME</h1>
             <h1 class="">TO DELANI STUDIO</h1>
             <p class="text-center">AMAZING PEOPLE ARE MAKING AMAZING DESINGS IN FUN ENVIRONMENTS</p>
        </div>
    </div>
+   <!-- hero section ends here -->
+
+
 </body>
 </html>
