style: add an about us section

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <title>Delani Studio</title>
 </head>
 <body>
-    
-    <!-- Hero section starts here -->
+
+<!-- Hero section starts here -->
     <div class="container-fluid hero">
         <div class="bg-image d-flex flex-column justify-content-center align-items-center"style="background-image: url('./assets/backgrounds/h_img.jpg');height: 100vh;">
             <img src="./assets/logo/logo.png" alt="" class="img-fluid mb-5">
@@ -23,8 +23,18 @@
             <p class="text-center">AMAZING PEOPLE ARE MAKING AMAZING DESINGS IN FUN ENVIRONMENTS</p>
        </div>
    </div>
-   <!-- hero section ends here -->
+<!-- hero section ends here -->
 
+<div class="container ">
+    <div class="container-fluid d-flex flex-column justify-content-center align-items-center">
+        <h2 class="mt-5">ABOUT US</h2>
+        <P class="text-center">When you work with us, you are part of a team of unlimited collaborators. All aspects of our software development process are intergrated, interactive and agile</P>
+        <P class="text-center">Our approach unifies design, development and product management to create exceptional products. </P>
+        <P class="text-center">We start each project by understanding your business goals, the user needs and product requirements</P>
+        <P class="text-center mb-10">Then we help translate them into effective and elegant solutions</P>
+    </div>
+
+</div>
 
 </body>
 </html>
