fix typos and add comments in about us section

--- a/index.html
+++ b/index.html
@@ -25,16 +25,19 @@
    </div>
 <!-- hero section ends here -->
 
-<div class="container ">
-    <div class="container-fluid d-flex flex-column justify-content-center align-items-center">
-        <h2 class="mt-5">ABOUT US</h2>
-        <P class="text-center">When you work with us, you are part of a team of unlimited collaborators. All aspects of our software development process are intergrated, interactive and agile</P>
-        <P class="text-center">Our approach unifies design, development and product management to create exceptional products. </P>
-        <P class="text-center">We start each project by understanding your business goals, the user needs and product requirements</P>
-        <P class="text-center mb-10">Then we help translate them into effective and elegant solutions</P>
-    </div>
 
-</div>
+<!-- About Us section starts here -->
+    <div class="container ">
+        <div class="container-fluid d-flex flex-column justify-content-center align-items-center">
+            <h2 class="mt-5">ABOUT US</h2>
+            <P class="text-center">When you work with us, you are part of a team of unlimited collaborators. All aspects of our software development process are intergrated, interactive <br>and agile.</P>
+            <P class="text-center">Our approach unifies design, development and product management to create exceptional products. </P>
+            <P class="text-center">We start each project by understanding your business goals, the user needs and product requirements.</P>
+            <P class="text-center mb-10">Then we help translate them into effective and elegant solutions.</P>
+        </div>
+    </div>
+<!-- About us section ends here -->
+
 
 </body>
 </html>
