style: add services section

--- a/index.html
+++ b/index.html
@@ -39,5 +39,19 @@
 <!-- About us section ends here -->
 
 
+<!-- Services section starts here -->
+    <div class="container-fluid hero">
+        <div class="bg-image d-flex flex-column justify-content-center align-items-center"style="background-image: url('./assets/backgrounds/s_image.jpg');">
+            <h1 class="text-white mt-5">Services</h1>
+            <P class="text-center mt-5">Before we sign a contract or write a line of code, our team will spend the necessary time needed to understand your product vision. </P>
+            <P class="text-center">The outcome of this scoping session is a proposal or high-level statement of work </P>
+            <P class="text-center mb-5">Based on your requirement, we can provide a complete offering or just the pieces you need</P>
+        </div>
+    </div>
+<!-- Services section ends here -->
+
+
+
+
 </body>
 </html>
