add what we do section

--- a/index.html
+++ b/index.html
@@ -59,6 +59,23 @@
     </div>
 <!-- Services section ends here -->
 
+<!-- What we do section starts here -->
+    <div class="container mt-5">
+        <div class="row mt-5 d-flex justify-content-around align-items-center flex-md-wrap">
+            <div class="col">
+                <img src="./assets/services_icons/design_icon.png" alt="" class="img-fluid ml-5">
+                <h6 class="text-center">Design</h6>
+            </div>
+            <div class="col">
+                <img src="./assets/services_icons/dev_icon.png" alt="" class="img-fluid">
+                <h6 class="text-center">Development</h6>
+            </div>
+            <div class="col">
+                <img src="./assets/services_icons/product_icon.png" alt="" class="img-fluid">
+                <h6 class="text-center">Product Management</h6>
+            </div>
+        </div>
+    </div>
 
 
 
