--- a/index.html
+++ b/index.html
@@ -6,15 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.css" rel="stylesheet"/>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.js"></script>
     <script src="./js/jquery-3.6.0.js"></script>
-    <script src="./js/mdb.min.js"></script>
     <script src="./js/script.js"></script>
     <link rel="stylesheet" type="text/css" href="./css/mdb.dark.min.css">
     <link rel="stylesheet" type="text/css" href="./css/mdb.min.css">
@@ -82,8 +77,163 @@
             </div>
         </div>
     </div>
+<!-- What we do section ends here -->
+
+<!-- Portfolio section starts here -->
+
+    <div class="container mt-lg-5">
+        <h2 class="text-center mt-lg-5">PORTFOLIO</h2>
+        <div class="row row-cols-1 row-cols-md-4 g-4 mt-lg-5">
+            <div class="col">
+                <div
+                class="bg-image card shadow-1-strong"
+                style="background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/003.webp');"
+              >
+                <div class="card-body text-white">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make up the bulk of the
+                    card's content.
+                  </p>
+                  <a href="#!" class="btn btn-outline-light">Button</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+                <div
+                class="bg-image card shadow-1-strong"
+                style="background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/003.webp');"
+              >
+                <div class="card-body text-white">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make up the bulk of the
+                    card's content.
+                  </p>
+                  <a href="#!" class="btn btn-outline-light">Button</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+                <div
+                class="bg-image card shadow-1-strong"
+                style="background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/003.webp');"
+              >
+                <div class="card-body text-white">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make up the bulk of the
+                    card's content.
+                  </p>
+                  <a href="#!" class="btn btn-outline-light">Button</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+                <div
+                class="bg-image card shadow-1-strong"
+                style="background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/003.webp');"
+              >
+                <div class="card-body text-white">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make up the bulk of the
+                    card's content.
+                  </p>
+                  <a href="#!" class="btn btn-outline-light">Button</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row row-cols-1 row-cols-md-4 g-4 mt-lg-3">
+            <div class="col">
+                <div
+                class="bg-image card shadow-1-strong"
+                style="background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/003.webp');"
+              >
+                <div class="card-body text-white">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make up the bulk of the
+                    card's content.
+                  </p>
+                  <a href="#!" class="btn btn-outline-light">Button</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+                <div
+                class="bg-image card shadow-1-strong"
+                style="background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/003.webp');"
+              >
+                <div class="card-body text-white">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make up the bulk of the
+                    card's content.
+                  </p>
+                  <a href="#!" class="btn btn-outline-light">Button</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+                <div
+                class="bg-image card shadow-1-strong"
+                style="background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/003.webp');"
+              >
+                <div class="card-body text-white">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make up the bulk of the
+                    card's content.
+                  </p>
+                  <a href="#!" class="btn btn-outline-light">Button</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+                <div
+                class="bg-image card shadow-1-strong"
+                style="background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/003.webp');"
+              >
+                <div class="card-body text-white">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make up the bulk of the
+                    card's content.
+                  </p>
+                  <a href="#!" class="btn btn-outline-light">Button</a>
+                </div>
+              </div>
+            </div>
+          </div>
+    </div>
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="./js/mdb.min.js"></script>
 </body>
 </html>
