style: add images to cards in Porfolio section

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
 <!-- What we do section starts here -->
     <div class="container mt-5">
+        <h2 class="text-center mt-lg-5">WHAT WE DO</h2>
         <div class="row mt-5 d-flex justify-content-around align-items-center flex-md-wrap">
             <div class="col">
                 <img src="./assets/services_icons/design_icon.png" alt="" class="img-fluid ml-5">
@@ -87,7 +88,7 @@
             <div class="col">
                 <div
                 class="bg-image card shadow-1-strong"
-                style="background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/003.webp');"
+                style="background-image: url('./assets/portfolio/work1.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white">
                   <h5 class="card-title">Card title</h5>
@@ -95,14 +96,13 @@
                     Some quick example text to build on the card title and make up the bulk of the
                     card's content.
                   </p>
-                  <a href="#!" class="btn btn-outline-light">Button</a>
                 </div>
               </div>
             </div>
             <div class="col">
                 <div
                 class="bg-image card shadow-1-strong"
-                style="background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/003.webp');"
+                style="background-image: url('./assets/portfolio/work2.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white">
                   <h5 class="card-title">Card title</h5>
@@ -110,14 +110,13 @@
                     Some quick example text to build on the card title and make up the bulk of the
                     card's content.
                   </p>
-                  <a href="#!" class="btn btn-outline-light">Button</a>
                 </div>
               </div>
             </div>
             <div class="col">
                 <div
                 class="bg-image card shadow-1-strong"
-                style="background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/003.webp');"
+                style="background-image: url('./assets/portfolio/work3.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white">
                   <h5 class="card-title">Card title</h5>
@@ -125,14 +124,13 @@
                     Some quick example text to build on the card title and make up the bulk of the
                     card's content.
                   </p>
-                  <a href="#!" class="btn btn-outline-light">Button</a>
                 </div>
               </div>
             </div>
             <div class="col">
                 <div
                 class="bg-image card shadow-1-strong"
-                style="background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/003.webp');"
+                style="background-image: url('./assets/portfolio/work4.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white">
                   <h5 class="card-title">Card title</h5>
@@ -140,7 +138,6 @@
                     Some quick example text to build on the card title and make up the bulk of the
                     card's content.
                   </p>
-                  <a href="#!" class="btn btn-outline-light">Button</a>
                 </div>
               </div>
             </div>
@@ -150,7 +147,7 @@
             <div class="col">
                 <div
                 class="bg-image card shadow-1-strong"
-                style="background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/003.webp');"
+                style="background-image: url('./assets/portfolio/work5.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white">
                   <h5 class="card-title">Card title</h5>
@@ -158,14 +155,13 @@
                     Some quick example text to build on the card title and make up the bulk of the
                     card's content.
                   </p>
-                  <a href="#!" class="btn btn-outline-light">Button</a>
                 </div>
               </div>
             </div>
             <div class="col">
                 <div
                 class="bg-image card shadow-1-strong"
-                style="background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/003.webp');"
+                style="background-image: url('./assets/portfolio/work6.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white">
                   <h5 class="card-title">Card title</h5>
@@ -173,14 +169,13 @@
                     Some quick example text to build on the card title and make up the bulk of the
                     card's content.
                   </p>
-                  <a href="#!" class="btn btn-outline-light">Button</a>
                 </div>
               </div>
             </div>
             <div class="col">
                 <div
                 class="bg-image card shadow-1-strong"
-                style="background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/003.webp');"
+                style="background-image: url('./assets/portfolio/work7.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white">
                   <h5 class="card-title">Card title</h5>
@@ -188,14 +183,13 @@
                     Some quick example text to build on the card title and make up the bulk of the
                     card's content.
                   </p>
-                  <a href="#!" class="btn btn-outline-light">Button</a>
                 </div>
               </div>
             </div>
             <div class="col">
                 <div
                 class="bg-image card shadow-1-strong"
-                style="background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/003.webp');"
+                style="background-image: url('./assets/portfolio/work8.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white">
                   <h5 class="card-title">Card title</h5>
@@ -203,8 +197,7 @@
                     Some quick example text to build on the card title and make up the bulk of the
                     card's content.
                   </p>
-                  <a href="#!" class="btn btn-outline-light">Button</a>
-                </div>
+                  </div>
               </div>
             </div>
           </div>
