--- a/index.html
+++ b/index.html
@@ -88,21 +88,7 @@
             <div class="col">
                 <div
                 class="bg-image card shadow-1-strong"
-                style="background-image: url('./assets/portfolio/work1.jpg'); height: 15rem;"
-              >
-                <div class="card-body text-white">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make up the bulk of the
-                    card's content.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-                <div
-                class="bg-image card shadow-1-strong"
-                style="background-image: url('./assets/portfolio/work2.jpg'); height: 15rem;"
+                style="background-image: url('./assets/portfolio/work4.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white">
                   <h5 class="card-title">Card title</h5>
@@ -130,7 +116,21 @@
             <div class="col">
                 <div
                 class="bg-image card shadow-1-strong"
-                style="background-image: url('./assets/portfolio/work4.jpg'); height: 15rem;"
+                style="background-image: url('./assets/portfolio/work2.jpg'); height: 15rem;"
+              >
+                <div class="card-body text-white">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make up the bulk of the
+                    card's content.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+                <div
+                class="bg-image card shadow-1-strong"
+                style="background-image: url('./assets/portfolio/work1.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white">
                   <h5 class="card-title">Card title</h5>
@@ -143,7 +143,7 @@
             </div>
           </div>
 
-          <div class="row row-cols-1 row-cols-md-4 g-4 mt-lg-3">
+          <div class="row row-cols-1 row-cols-md-4 g-4 mt-lg-3 mt-3">
             <div class="col">
                 <div
                 class="bg-image card shadow-1-strong"
