style: add title on portfolio images

--- a/index.html
+++ b/index.html
@@ -87,29 +87,21 @@
         <div class="row row-cols-1 row-cols-md-4 g-4 mt-lg-5">
             <div class="col">
                 <div
-                class="bg-image card shadow-1-strong"
+                class="bg-image card shadow-1-strong hover-zoom"
                 style="background-image: url('./assets/portfolio/work4.jpg'); height: 15rem;"
               >
-                <div class="card-body text-white">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make up the bulk of the
-                    card's content.
-                  </p>
+                <div class="card-body text-white ">
+                  <h5 class="card-title">Blank Space </h5>
                 </div>
               </div>
             </div>
             <div class="col">
                 <div
-                class="bg-image card shadow-1-strong"
+                class="bg-image card shadow-1-strong hover-zoom"
                 style="background-image: url('./assets/portfolio/work3.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make up the bulk of the
-                    card's content.
-                  </p>
+                  <h5 class="card-title">Ontario</h5>
                 </div>
               </div>
             </div>
@@ -119,11 +111,7 @@
                 style="background-image: url('./assets/portfolio/work2.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make up the bulk of the
-                    card's content.
-                  </p>
+                  <h5 class="card-title">Dimensions illusions</h5>
                 </div>
               </div>
             </div>
@@ -133,11 +121,7 @@
                 style="background-image: url('./assets/portfolio/work1.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make up the bulk of the
-                    card's content.
-                  </p>
+                  <h5 class="card-title">Jim Carrey</h5>
                 </div>
               </div>
             </div>
@@ -150,11 +134,7 @@
                 style="background-image: url('./assets/portfolio/work5.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make up the bulk of the
-                    card's content.
-                  </p>
+                  <h5 class="card-title">Have a good day site</h5>
                 </div>
               </div>
             </div>
@@ -164,11 +144,7 @@
                 style="background-image: url('./assets/portfolio/work6.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make up the bulk of the
-                    card's content.
-                  </p>
+                  <h5 class="card-title">Button checker</h5>
                 </div>
               </div>
             </div>
@@ -178,11 +154,7 @@
                 style="background-image: url('./assets/portfolio/work7.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make up the bulk of the
-                    card's content.
-                  </p>
+                  <h5 class="card-title">Burned Logo Mockup</h5>
                 </div>
               </div>
             </div>
@@ -192,11 +164,7 @@
                 style="background-image: url('./assets/portfolio/work8.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make up the bulk of the
-                    card's content.
-                  </p>
+                  <h5 class="card-title">Giraffe Restaurant</h5>
                   </div>
               </div>
             </div>
