--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@
     <div class="container mt-5">
         <h2 class="text-center mt-lg-5">WHAT WE DO</h2>
         <div class="row mt-5 d-flex justify-content-around align-items-center flex-sm-wrap">
-            <div class="col">
+            <div class="col-md-4">
                 <img src="./assets/services_icons/design_icon.png" alt="" class="img-fluid ml-5 img1">
-                <h6 class="text-center">Design</h6>
+                <h6 class="text-center titl">Design</h6>
                 <p class="text-center what1">Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
                     Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
             </div>
-            <div class="col">
+            <div class="col-md-4">
                 <img src="./assets/services_icons/dev_icon.png" alt="" class="img-fluid img2">
-                <h6 class="text-center ">Development</h6>
+                <h6 class="text-center titl">Development</h6>
                 <p class="text-center what2">All engineers are fluent in the latest enterprise, mobile and web development technologies.
                     They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
             </div>
-            <div class="col">
+            <div class="col-md-4">
                 <img src="./assets/services_icons/product_icon.png" alt="" class="img-fluid img3">
-                <h6 class="text-center">Product Management</h6>
+                <h6 class="text-center titl">Product Management</h6>
                 <p class="text-center what3">Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. 
                     This iterative process allows for changes as business requirements evolve.</p>
             </div>
@@ -84,7 +84,7 @@
 
     <div class="container mt-lg-5">
         <h2 class="text-center mt-lg-5">PORTFOLIO</h2>
-        <div class="row row-cols-1 row-cols-md-4 g-4 mt-lg-5">
+        <div class="row row-cols-1 row-cols-md-4 g-4 ">
             <div class="col">
                 <div
                 class="bg-image card shadow-1-strong hover-zoom"
