add alert on user feedback

--- a/index.html
+++ b/index.html
@@ -197,12 +197,12 @@
           
             <!-- Message input -->
             <div class="form-outline mb-4">
-              <textarea class="form-control txt" id="form6Example7" rows="4" required></textarea>
+              <textarea class="form-control text-white txt" id="form6Example7" rows="4" required></textarea>
               <label class="form-label text-white" for="form6Example7">Your Text Here...</label>
             </div>
           
             <!-- Submit button -->
-            <button type="submit" class="btn btn-primary d-flex align-items-center mb-4" onclick="submit()">Submit</button>
+            <button type="submit" class="btn btn-primary mb-4" onclick="send();">Submit</button>
           </form>
    </div>
 </div>
