--- a/index.html
+++ b/index.html
@@ -87,41 +87,41 @@
         <div class="row row-cols-1 row-cols-md-4 g-4 ">
             <div class="col">
                 <div
-                class="bg-image card shadow-1-strong hover-zoom"
+                class="bg-image card card1 shadow-1-strong hover-zoom"
                 style="background-image: url('./assets/portfolio/work4.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white ">
-                  <h5 class="card-title">Blank Space </h5>
+                  <h5 class="card-title card-title1">Blank Space </h5>
                 </div>
               </div>
             </div>
             <div class="col">
                 <div
-                class="bg-image card shadow-1-strong hover-zoom"
+                class="bg-image card card2 shadow-1-strong hover-zoom"
                 style="background-image: url('./assets/portfolio/work3.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white">
-                  <h5 class="card-title">Ontario</h5>
+                  <h5 class="card-title card-title2">Ontario</h5>
                 </div>
               </div>
             </div>
             <div class="col">
                 <div
-                class="bg-image card shadow-1-strong"
+                class="bg-image card card3 shadow-1-strong"
                 style="background-image: url('./assets/portfolio/work2.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white">
-                  <h5 class="card-title">Dimensions illusions</h5>
+                  <h5 class="card-title card-title3">Dimensions illusions</h5>
                 </div>
               </div>
             </div>
             <div class="col">
                 <div
-                class="bg-image card shadow-1-strong"
+                class="bg-image card card4 shadow-1-strong"
                 style="background-image: url('./assets/portfolio/work1.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white">
-                  <h5 class="card-title">Jim Carrey</h5>
+                  <h5 class="card-title card-title4">Jim Carrey</h5>
                 </div>
               </div>
             </div>
@@ -130,41 +130,41 @@
           <div class="row row-cols-1 row-cols-md-4 g-4 mt-lg-3 mt-3">
             <div class="col">
                 <div
-                class="bg-image card shadow-1-strong"
+                class="bg-image card card5 shadow-1-strong"
                 style="background-image: url('./assets/portfolio/work5.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white">
-                  <h5 class="card-title">Have a good day site</h5>
+                  <h5 class="card-title card-title5">Have a good day site</h5>
                 </div>
               </div>
             </div>
             <div class="col">
                 <div
-                class="bg-image card shadow-1-strong"
+                class="bg-image card card6 shadow-1-strong"
                 style="background-image: url('./assets/portfolio/work6.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white">
-                  <h5 class="card-title">Button checker</h5>
+                  <h5 class="card-title card-title6">Button checker</h5>
                 </div>
               </div>
             </div>
             <div class="col">
                 <div
-                class="bg-image card shadow-1-strong"
+                class="bg-image card card7 shadow-1-strong"
                 style="background-image: url('./assets/portfolio/work7.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white">
-                  <h5 class="card-title">Burned Logo Mockup</h5>
+                  <h5 class="card-title card-title7">Burned Logo Mockup</h5>
                 </div>
               </div>
             </div>
             <div class="col">
                 <div
-                class="bg-image card shadow-1-strong"
+                class="bg-image card card8 shadow-1-strong"
                 style="background-image: url('./assets/portfolio/work8.jpg'); height: 15rem;"
               >
                 <div class="card-body text-white">
-                  <h5 class="card-title">Giraffe Restaurant</h5>
+                  <h5 class="card-title card-title8">Giraffe Restaurant</h5>
                   </div>
               </div>
             </div>
