--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <img src="./assets/logo/logo.png" alt="" class="img-fluid mb-5">
             <h1 class="mb-4">WELCOME</h1>
             <h1 class="">TO DELANI STUDIO</h1>
-            <p class="text-center">AMAZING PEOPLE ARE MAKING AMAZING DESINGS IN FUN ENVIRONMENTS</p>
+            <p class="text-center mb-5">AMAZING PEOPLE ARE MAKING AMAZING DESINGS IN FUN ENVIRONMENTS</p>
+           <a href="#about"><img src="./assets/mouse_click.png" alt="" class="img-fluid mt-5"></a> 
        </div>
    </div>
 <!-- hero section ends here -->
@@ -32,8 +33,8 @@
 
 <!-- About Us section starts here -->
     <div class="container ">
-        <div class="container-fluid d-flex flex-column justify-content-center align-items-center">
-            <h2 class="mt-5">ABOUT US</h2>
+        <div class="container-fluid d-flex flex-column justify-content-center align-items-center" id="about">
+            <h2 class="mt-5" >ABOUT US</h2>
             <P class="text-center">When you work with us, you are part of a team of unlimited collaborators. All aspects of our software development process are intergrated, interactive <br>and agile.</P>
             <P class="text-center">Our approach unifies design, development and product management to create exceptional products. </P>
             <P class="text-center">We start each project by understanding your business goals, the user needs and product requirements.</P>
